--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,8 @@
 ---
 name: Process BibTeX Workflow
 
+permissions: read-all
+
 on:
   push:
     branches:
@@ -13,6 +15,10 @@ jobs:
   process_bibtex:
     runs-on: ubuntu-latest
 
+    permissions:
+      checks: write
+      pull-requests: write
+    
     steps:
     - name: Check out repository
       uses: actions/checkout@v3
