Now ignoring .mypy_cache

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,4 +1,11 @@
+---
 APPLY_FIXES: all
+
+DISABLE:
+  - PYTHON_PYRIGHT
 
 DISABLE_LINTERS:
   - SPELL_CSPELL
+
+EXCLUDED_DIRECTORIES:
+  - ".mypy_cache"
