--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: bibtex_processing
+          activate-environment: bibtex_tools
           environment-file: environment.yml
           auto-activate-base: false
 
