Installing bibtexparser in docker image for mega linter

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,6 +1,10 @@
 ---
 APPLY_FIXES: all
 
+PRE_COMMANDS:
+  - command: pip install bibtexparser
+    cwd: "workspace"   # Will be run at the root of the workspace (usually your repository root)
+
 DISABLE_LINTERS:
   - SPELL_CSPELL
   - PYTHON_PYRIGHT
