Exclude irrelevant files from being checked by devskim

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -2,7 +2,7 @@
 APPLY_FIXES: all
 
 PRE_COMMANDS:
-  - command: pip install bibtexparser
+  - command: "pip install bibtexparser"
     cwd: "workspace"   # Will be run at the root of the workspace (usually your repository root)
 
 DISABLE_LINTERS:
@@ -11,3 +11,6 @@ DISABLE_LINTERS:
 
 EXCLUDED_DIRECTORIES:
   - ".mypy_cache"
+
+REPOSITORY_DEVSKIM_ARGUMENTS:
+  - "-g **/bin/**,**/obj/**,**/.git/**,**/.mypy_cache/**"
