More fixes for linter

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -3,14 +3,10 @@ APPLY_FIXES: all
 
 PRE_COMMANDS:
   - command: "pip install bibtexparser"
-    cwd: "workspace"   # Will be run at the root of the workspace (usually your repository root)
-
+    cwd: "workspace" # Will be run at the root of the workspace
 DISABLE_LINTERS:
   - SPELL_CSPELL
   - PYTHON_PYRIGHT
 
 EXCLUDED_DIRECTORIES:
   - ".mypy_cache"
-
-REPOSITORY_DEVSKIM_ARGUMENTS:
-  - "-g **/bin/**,**/obj/**,**/.git/**,**/.mypy_cache/**"
