--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -4,9 +4,10 @@ APPLY_FIXES: all
 PRE_COMMANDS:
   - command: "pip install bibtexparser"
     cwd: "workspace" # Will be run at the root of the workspace
+
 DISABLE_LINTERS:
   - SPELL_CSPELL
   - PYTHON_PYRIGHT
 
-EXCLUDED_DIRECTORIES:
-  - ".mypy_cache"
+ADDITIONAL_EXCLUDED_DIRECTORIES:
+  - "**/.mypy_cache"
