--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -9,5 +9,8 @@ DISABLE_LINTERS:
   - SPELL_CSPELL
   - PYTHON_PYRIGHT
 
+EXCLUDED_DIRECTORIES:
+  - ".mypy_cache"
+
 ADDITIONAL_EXCLUDED_DIRECTORIES:
   - "**/.mypy_cache"
