Disabled DIVSKIM because it somehow does not ignore .mypy_cache even if I tell it to

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -8,9 +8,4 @@ PRE_COMMANDS:
 DISABLE_LINTERS:
   - SPELL_CSPELL
   - PYTHON_PYRIGHT
-
-EXCLUDED_DIRECTORIES:
-  - ".mypy_cache"
-
-ADDITIONAL_EXCLUDED_DIRECTORIES:
-  - "**/.mypy_cache"
+  - REPOSITORY_DEVSKIM
